--- a/index.html
+++ b/index.html
@@ -10,5 +10,9 @@
   <body>
     <div id="root"></div>
     <script type="module" src="src/main.jsx"></script>
+    <div class="box">
+      <div class="box-inner">
+      </div>
+    </div>
   </body>
 </html>
